--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Redirecting...</title>
   </head>
   <body>
-    <p>If you are not redirected automatically, <a href="../My-Website/Resources/Views/home.html">click here</a>.</p>
+    <p>If you are not redirected automatically, <a href="Views/home.html">click here</a>.</p>
   </body>
 </html>
