--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; url=Views/home.html" />
+    <meta http-equiv="refresh" content="0; url=Resources/Views/home.html" />
     <title>Redirecting...</title>
   </head>
   <body>
-    <p>If you are not redirected automatically, <a href="Views/home.html">click here</a>.</p>
+    <p>If you are not redirected automatically, <a href="Resources/Views/home.html">click here</a>.</p>
   </body>
 </html>
