Social Icon fixes

--- a/projects.html
+++ b/projects.html
@@ -132,7 +132,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body> 
 
-
 <footer class="py-1 mt-5">
   <div class="container d-flex justify-content-center gap-5">
     <!-- Instagram -->
@@ -140,11 +139,11 @@
       <i class="fab fa-instagram"></i>
     </a>
     <!-- LinkedIn -->
-    <a href="https://linkedin.com/in/GregoryButz" target="_blank" class="text-light fs-1">
+    <a href="https://linkedin.com/in/gregory-butz-887667325" target="_blank" class="text-light fs-1">
       <i class="fab fa-linkedin"></i>
     </a>
     <!-- Facebook -->
-    <a href="https://facebook.com/GregoryButz" target="_blank" class="text-light fs-1">
+    <a href="https://facebook.com/gregory.butz.2025" target="_blank" class="text-light fs-1">
       <i class="fab fa-facebook"></i>
     </a>
     <!-- GitHub -->
@@ -153,4 +152,5 @@
     </a>
   </div>
 </footer>
+</html>
 </html>
