--- a/resume.html
+++ b/resume.html
@@ -245,7 +245,6 @@
 </main>
 </body>
 
-
 <footer class="py-1 mt-5">
   <div class="container d-flex justify-content-center gap-5">
     <!-- Instagram -->
@@ -253,11 +252,11 @@
       <i class="fab fa-instagram"></i>
     </a>
     <!-- LinkedIn -->
-    <a href="https://linkedin.com/in/GregoryButz" target="_blank" class="text-light fs-1">
+    <a href="https://linkedin.com/in/gregory-butz-887667325" target="_blank" class="text-light fs-1">
       <i class="fab fa-linkedin"></i>
     </a>
     <!-- Facebook -->
-    <a href="https://facebook.com/GregoryButz" target="_blank" class="text-light fs-1">
+    <a href="https://facebook.com/gregory.butz.2025" target="_blank" class="text-light fs-1">
       <i class="fab fa-facebook"></i>
     </a>
     <!-- GitHub -->
@@ -266,4 +265,5 @@
     </a>
   </div>
 </footer>
+</html>
 </html>
