--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
       <i class="fab fa-instagram"></i>
     </a>
     <!-- LinkedIn -->
-    <a href="https://linkedin.com/in/GregoryButz" target="_blank" class="text-light fs-1">
+    <a href="https://linkedin.com/in/gregory-butz-887667325" target="_blank" class="text-light fs-1">
       <i class="fab fa-linkedin"></i>
     </a>
     <!-- Facebook -->
-    <a href="https://facebook.com/GregoryButz" target="_blank" class="text-light fs-1">
+    <a href="https://facebook.com/gregory.butz.2025" target="_blank" class="text-light fs-1">
       <i class="fab fa-facebook"></i>
     </a>
     <!-- GitHub -->
