--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
                   Also spending time with my girlfriend
                 </p>
                 <p class="text-center mb-4" style="font-family: 'Times New Roman', Times, serif;" style="color: black;">
-                    My goals are to create a way of security that can be used by those around the world with ease and having strong integrity, while being easily
-                    accessiable to all people with ease
+                    I aim to create globally accessible security that maintains uncompromising system integrity, while still being easy use
                 </p>
                 <div class="text-center">
                   <a href="resume.html" class="btn btn-primary btn-lg fw-semibold" rel="noopener">
