--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
             <div class="col-md-8">
               <p>
                 A small yet detailed object orientated coding project made to simulate the game of life, made with 
-                color-coded board design, stat updates basd on board position, and randomized movements based on "dice roll"
+                color-coded board design, stat updates based on board position, and randomized movements based on "dice roll"
               </p>
               <ul>
                 <li>Tech: C++</li>
