--- a/resume.html
+++ b/resume.html
@@ -94,7 +94,7 @@
         </div>
       </div>
     <div>
-        <a href="GregoryButzResume.pdf" download="filename.pdf" class="btn btn-primary mt-3">
+        <a href="GregoryButzResume.pdf" download="resume.pdf" class="btn btn-primary mt-3">
             <i class="fas fa-file-download"></i> Download Resume PDF
         </a>
     </div>
