remove the PDF download (temporary)

--- a/resume.html
+++ b/resume.html
@@ -94,9 +94,9 @@
         </div>
       </div>
     <div>
-        <a href="GregoryButzResume.pdf" download="resume.pdf" class="btn btn-primary mt-3">
+        <!--<a href="GregoryButzResume.pdf" download="resume.pdf" class="btn btn-primary mt-3">
             <i class="fas fa-file-download"></i> Download Resume PDF
-        </a>
+        </a> -->
     </div>
 </aside>
 
